# MCVK

./: .gitignore  build.gradle  dependencies.gradle  gradle.properties
native/: Cargo.toml  rustfmt.toml  typos.toml
native/benches/: test.rs
native/native-macros/: Cargo.toml
native/native-macros/src/: field_lookup.rs  gl_fn_decl.rs  jni_export.rs  lib.rs
native/src/: jni.rs  lib.rs  old_main.rs
native/src/shaders/: ambient.frag  ambient.vert  deferred.vert
native/src/vulkan/: commands.rs  devices.rs  dynamic_shader.rs  dynpipe_tests.rs  glfw_window.rs  insn_assembler.rs  instance.rs  mod.rs  render_manager.rs  sandbox.rs  sandbox_jni.rs  shim_tests.rs  spinlock.rs  swapchain.rs  utils.rs  workers.rs
native/src/vulkan/sandbox_jni/: client_arrays.rs  generic.rs  jni_prelude.rs  matrices.rs  mod.rs  rendering.rs  textures.rs
native/src/vulkan/shaders/: uniforms.rs
native/src/vulkan/textures/: lookup.rs  mod.rs  texture_manager.rs  textures.rs
scripts/: gen_sandbox_shims.py  get_shadows.py  update_shadows.sh
src/main/java/com/recursive_pineapple/mcvk/: ClientProxy.java  CommonProxy.java  Config.java  MCVK.java  MCVKCore.java  MCVKRfbPlugin.java
src/main/java/com/recursive_pineapple/mcvk/asm/: ASMUtils.java  ClassConstantPoolParser.java  CoreTransformer.java
src/main/java/com/recursive_pineapple/mcvk/mixins/: LateMixins.java  Mixins.java
src/main/java/com/recursive_pineapple/mcvk/mixins/early/net/minecraft/client/: MinecraftMixins.java
src/main/java/com/recursive_pineapple/mcvk/mixins/early/net/minecraft/client/renderer/: OpenGLHelperMixins.java  TessellatorMixins.java
src/main/java/com/recursive_pineapple/mcvk/mixins/early/net/minecraft/client/renderer/texture/: Statics.java  TextureAtlasSpriteExt.java  TextureAtlasSpriteMixins.java  TextureMapMixins.java
src/main/java/com/recursive_pineapple/mcvk/mixins/early/net/minecraft/crash/: CrashReportCategoryMixins.java
src/main/java/com/recursive_pineapple/mcvk/rendering/: ImageData.java  MCVKNative.java  RenderSandbox.java  RenderSandboxGen.java  VkInstance.java
src/main/java/com/recursive_pineapple/mcvk/utils/: IOUtils.java
src/main/resources/: LICENSE  mcmod.info  mixins.mcvk.early.json  mixins.mcvk.json  mixins.mcvk.late.json
