[package]
name = "mcvk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
pipe-trait = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
enum_primitive = "0.1"
structstruck = "0.4"
derivative = "2.2"

serde = "1.0"
bincode = "1.3"

jni = "0.21"

native-macros = { path = "./native-macros" }

bytemuck = "1.15"
nalgebra = "*"
nalgebra-glm = "0.18"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

gl_constants = "0.1.1"

glfw = { version = "0.55", features = ["vulkan"] }

vulkano = "0.34"
ash = "*"

vulkano-shaders = "0.34"
shaderc = "0.8"
concat-string = "1.0"

image = "0.25"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "test"
harness = false
