[package]
name = "mcvk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
pipe-trait = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
enum_primitive = "0.1"
structstruck = "0.4"
derivative = "2.2"

fastset = "0.4"

serde = "1.0"
serde_json = "1.0"
# bincode = "1.3"

tokio = { version = "1.40", features = ["full"] }

jni = "0.21"

native-macros = { path = "./native-macros" }

bytemuck = "1.15"
nalgebra = { version = "0.32", features = ["bytemuck"] }
nalgebra-glm = "0.18"
smallvec = "1.13"

num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

gl_constants = "0.1.1"

glfw = { version = "0", features = ["vulkan"] }

vulkano = "0.34"
ash = "0.37"

vulkano-shaders = "0.34"
shaderc = "0.8"
concat-string = "1.0"

image = "0.25"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "test"
harness = false
