[package]
name = "mcvk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
pipe-trait = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
enum_primitive = "0.1"
structstruck = "0.4"
derivative = "2.2"

serde = "1.0"
serde_json = "1.0"
# bincode = "1.3"

tokio = { version = "1.40", features = ["full"] }

jni = "0.21"

native-macros = { path = "./native-macros" }

bytemuck = "1.15"
nalgebra = { version = "0.32", features = ["bytemuck"] }
nalgebra-glm = "0.18"
smallvec = "1.13"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

image = "0.25"

vulkano = "0.34"
ash = "0.37"
gl_constants = "0.1.1"
glfw = { version = "0", features = ["vulkan"] }

vulkano-shaders = "0.34"
concat-string = "1.0"
glslang = "0.6"

weak-table = "0.3"
lru = "0.12"
fastset = "0.4"
static_aabb2d_index = "2.0"
slab = "0.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "test"
harness = false
